# personal-website

./: Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
src/: main.rs
static/: sitemap.xml
static/css/: style.css
templates/: contact.html  experience.html  index.html  layout.html  projects.html  research.html  skills.html
